[package]
name = "rusty-bybit"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
thiserror = "2.0"

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1.0", features = ["full"] }
