[package]
name = "rusty-bybit"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "An unofficial Rust SDK for the Bybit V5 API"
repository = "https://github.com/54corbin/rusty-bybit"
keywords = ["bybit", "trading", "api", "crypto", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
thiserror = "2.0"

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1.0", features = ["full"] }
